-
Type:
Bug
-
Status: Closed
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 0.9
-
Fix Version/s: 0.10.0
-
Component/s: C++ - Library
-
Labels:None
-
Environment:
64-bit. Windows without NOMINMAX set.
-
Patch Info:Patch Available
TNonblockingServer and THttpServer have size_t -> uint32_t truncations.
TZlibTransport calls std::min without enclosing it in parens. This is a really minor issue, since we technically build with NOMINMAX in the environment (which fixes the problem), but I have a strange personal goal of being able to build without setting NOMINMAX.