THRIFT-2027: Minor 64-bit and NOMINMAX issues in C++ library Client: cpp Patch: Ben Craig